private_server/guard/CELL-19/Q-57/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-19/Q-57/19-57.py", line 5
    maximum = 
             ^
SyntaxError: invalid syntax
